# campusdigitalfp_email_sender

./: README.md  pyproject.toml
campusdigitalfp_email_sender/: cli.py  config.py  mailer.py
tests/: test_cli.py  test_mailer.py
