[tool.poetry]
name = "campusdigitalfp_email_sender"
version = "0.1.0"
description = "Automatic mail app for CampusDigitalFP projects"
authors = ["Dario Ureña <darioaxel@gmail.com>"]
license = "GLP-3.0"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [{include = "campusdigitalfp_email_sender"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-mock = "^3.11"
pytest-cov = "^4.0" 

[tool.poetry.scripts]
campusdigitalfp_email_sender = "campusdigitalfp_email_sender.__main__:main"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--verbose --cov=campusdigitalfp_email_sender --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


